--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <h1>Hellow World! (:</h1>
+    <h2>Who am I?</h2>
+    <img src="images/eupngsite.png" alt="é uma foto de mim mesmo, Alan Santos.">
+    <p>Meu nome é Alan Santos, sou estudante de Análise e <br>Desenvolvimento de Sistemas e estou estudando programação. <br>Gosto bastante de animações num geral, e gostaria de poder <br>criar algo com vida utilizando meu código.</p>
+    <p>Lembre-se: escute Belchior!</p>
+
+    <h2>Minhas redes:</h2>
+    <ul>
+        <li><a href="https://github.com/ssantosalan" target="_blank"><img src="images/githublogo.png" alt="imagem do github">/ssantosalan</a> - Acesse meu repositório público no GitHub</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     
 </body>
 </html>
