--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="favicon/bluesnovaicon.ico" alt="ícone do site">
+    <link rel="shortcut icon" href="favicon/bluesnovaicon.ico" type="image/x-icon">
     <title>Quem sou eu</title>
 </head>
 <body>
