--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon/bluesnovaicon.ico" type="image/x-icon">
-    <title>Quem sou eu</title>
+    <title>Alan Santos</title>
 </head>
 <body>
     <h1>Hellow World! (:</h1>
