--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon/bluesnovaicon.ico" type="image/x-icon">
     <title>Alan Santos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hellow World! (:</h1>
