--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Hellow World! (:</h1>
         <h2>Who am I?</h2>
         <img src="images/eupngsite.png" alt="é uma foto de mim mesmo, Alan Santos.">
-        <p>Meu nome é Alan Santos, sou estudante de Análise e Desenvolvimento de Sistemas e estou estudando programação. Eu gosto bastante de animações num geral, e gostaria de poder <br>criar algo com vida utilizando meu código.</p>
-        <p>Estou aprendendo Java, HTML, CSS, JavaScript e <br>conforme eu for aprendendo, irei atualizando essa página.</p>
+        <p>Meu nome é Alan Santos, sou estudante de Análise e Desenvolvimento de Sistemas e estou estudando programação. Eu gosto bastante de animações num geral, e gostaria de poder criar algo com vida utilizando meu código.</p>
+        <p>Estou aprendendo Java, HTML, CSS, JavaScript e conforme eu for aprendendo, irei atualizando essa página.</p>
         <p>Lembre-se: escute Belchior!</p>
         <h2>Minhas redes:</h2>
         <ul>
