--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <h1>Hellow World! (:</h1>
-        <h2>Who am I?</h2>
-        <img src="images/eupngsite.png" alt="é uma foto de mim mesmo, Alan Santos.">
-        <p>Meu nome é Alan Santos, sou estudante de Análise e Desenvolvimento de Sistemas e estou estudando programação. Eu gosto bastante de animações num geral, e gostaria de poder criar algo com vida utilizando meu código.</p>
-        <p>Estou aprendendo Java, HTML, CSS, JavaScript e conforme eu for aprendendo, irei atualizando essa página.</p>
-        <p>Lembre-se: escute Belchior!</p>
-        <h2>Minhas redes:</h2>
-        <ul>
-            <li><a href="https://github.com/ssantosalan" target="_blank"><img src="images/icone-github.png" alt="imagem do github">/ssantosalan</a> - Acesse meu GitHub</li>
-            <li><a href="https://twitter.com/Alan0101010101" target="_blank"><img src="images/icone-twitter.png" alt="logo do twitter">/Alan0101010101</a> - Me segue lá no Twitter</li>
-            <li><a href="https://www.linkedin.com/in/alan-s-santos/" target="_blank"><img src="images/icone-linkedin.png" alt="logo do LinkedIn">/alan-s-santos/</a> - Me segue lá no LinkedIn</li>
-            <li><a href="https://www.facebook.com/alanxdss" target="_blank"><img src="images/icone-facebook.png" alt="logo do Facebook">/alanxdss</a> - Me segue lá no Facebook</li>
-            <li><a href="https://www.instagram.com/alanxdss/" target="_blank"><img src="images/icone-instagram.png" alt="logo do Instagram">/alanxdss/</a> - Me segue lá no Instagram</li>
-        </ul>
-    </main>
+    <header>
+        
+    </header>
+    <section>
+        <main>
+            <h1>Who am I? (:</h1>
+            <picture><img src="images/eu-page.png" alt="é uma foto de mim mesmo, Alan Santos."></picture>
+            <p>Meu nome é Alan Santos, sou estudante de Análise e Desenvolvimento de Sistemas e estou estudando programação. Eu gosto bastante de animações num geral, e gostaria de poder criar algo com vida utilizando meu código.</p>
+            <p>Estou aprendendo Java, HTML, CSS, JavaScript e conforme eu for aprendendo, irei atualizando essa página.</p>
+            <p>Lembre-se: escute Belchior!</p>
+            <h2>Minhas redes:</h2>
+            <ul>
+                <li><a href="https://github.com/ssantosalan" target="_blank"><img src="images/icone-github.png" alt="imagem do github">/ssantosalan</a> - Acesse meu GitHub</li>
+                <li><a href="https://twitter.com/Alan0101010101" target="_blank"><img src="images/icone-twitter.png" alt="logo do twitter">/Alan0101010101</a> - Me segue lá no Twitter</li>
+                <li><a href="https://www.linkedin.com/in/alan-s-santos/" target="_blank"><img src="images/icone-linkedin.png" alt="logo do LinkedIn">/alan-s-santos/</a> - Me segue lá no LinkedIn</li>
+                <li><a href="https://www.facebook.com/alanxdss" target="_blank"><img src="images/icone-facebook.png" alt="logo do Facebook">/alanxdss</a> - Me segue lá no Facebook</li>
+                <li><a href="https://www.instagram.com/alanxdss/" target="_blank"><img src="images/icone-instagram.png" alt="logo do Instagram">/alanxdss/</a> - Me segue lá no Instagram</li>
+            </ul>
+        </main>
+    </section>
+    <footer>
+        <p>Design by <strong>Alan Santos</strong></p>
+    </footer>
     
 </body>
 </html>
