--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <p>Lembre-se: escute Belchior!</p>
             <h2>Minhas redes:</h2>
             <ul>
-                <li><a href="https://github.com/ssantosalan" target="_blank"><img src="images/icone-github.png" alt="imagem do github">/ssantosalan</a> - Acesse meu GitHub</li>
-                <li><a href="https://twitter.com/Alan0101010101" target="_blank"><img src="images/icone-twitter.png" alt="logo do twitter">/Alan0101010101</a> - Me segue lá no Twitter</li>
-                <li><a href="https://www.linkedin.com/in/alan-s-santos/" target="_blank"><img src="images/icone-linkedin.png" alt="logo do LinkedIn">/alan-s-santos/</a> - Me segue lá no LinkedIn</li>
-                <li><a href="https://www.facebook.com/alanxdss" target="_blank"><img src="images/icone-facebook.png" alt="logo do Facebook">/alanxdss</a> - Me segue lá no Facebook</li>
-                <li><a href="https://www.instagram.com/alanxdss/" target="_blank"><img src="images/icone-instagram.png" alt="logo do Instagram">/alanxdss/</a> - Me segue lá no Instagram</li>
+                <li><a href="https://github.com/ssantosalan" target="_blank"><img src="images/icone-github.png" alt="imagem do github">/ssantosalan</a></li>
+                <li><a href="https://twitter.com/Alan0101010101" target="_blank"><img src="images/icone-twitter.png" alt="logo do twitter">/Alan0101010101</a></li>
+                <li><a href="https://www.linkedin.com/in/alan-s-santos/" target="_blank"><img src="images/icone-linkedin.png" alt="logo do LinkedIn">/alan-s-santos/</a</li>
+                <li><a href="https://www.facebook.com/alanxdss" target="_blank"><img src="images/icone-facebook.png" alt="logo do Facebook">/alanxdss</a> - </li>
+                <li><a href="https://www.instagram.com/alanxdss/" target="_blank"><img src="images/icone-instagram.png" alt="logo do Instagram">/alanxdss/</a> - </li>
             </ul>
         </main>
     </section>
