--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <main>
             <h1>Who am I? (:</h1>
             <picture><img src="images/eu-page.png" alt="é uma foto de mim mesmo, Alan Santos."></picture>
-            <p>Meu nome é Alan Santos, sou estudante de Análise e Desenvolvimento de Sistemas e estou estudando programação. Eu gosto bastante de animações num geral, e gostaria de poder criar algo com vida utilizando meu código.</p>
+            <p>Meu nome é <strong>Alan Santos</strong>, sou estudante de Análise e Desenvolvimento de Sistemas e estou estudando programação. Eu gosto bastante de animações num geral, e gostaria de poder criar algo com vida utilizando meu código.</p>
             <p>Estou aprendendo Java, HTML, CSS, JavaScript e conforme eu for aprendendo, irei atualizando essa página.</p>
             <p>Lembre-se: escute Belchior!</p>
             <h2>Minhas redes:</h2>
             <ul>
                 <li><a href="https://github.com/ssantosalan" target="_blank"><img src="images/icone-github.png" alt="imagem do github">/ssantosalan</a></li>
                 <li><a href="https://twitter.com/Alan0101010101" target="_blank"><img src="images/icone-twitter.png" alt="logo do twitter">/Alan0101010101</a></li>
-                <li><a href="https://www.linkedin.com/in/alan-s-santos/" target="_blank"><img src="images/icone-linkedin.png" alt="logo do LinkedIn">/alan-s-santos/</a</li>
-                <li><a href="https://www.facebook.com/alanxdss" target="_blank"><img src="images/icone-facebook.png" alt="logo do Facebook">/alanxdss</a> - </li>
-                <li><a href="https://www.instagram.com/alanxdss/" target="_blank"><img src="images/icone-instagram.png" alt="logo do Instagram">/alanxdss/</a> - </li>
+                <li><a href="https://www.linkedin.com/in/alan-s-santos/" target="_blank"><img src="images/icone-linkedin.png" alt="logo do LinkedIn">/alan-s-santos</a</li>
+                <li><a href="https://www.facebook.com/alanxdss" target="_blank"><img src="images/icone-facebook.png" alt="logo do Facebook">/alanxdss</a></li>
+                <li><a href="https://www.instagram.com/alanxdss/" target="_blank"><img src="images/icone-instagram.png" alt="logo do Instagram">/alanxdss</a></li>
             </ul>
         </main>
     </section>
