--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </main>
     </section>
     <footer>
-        <p>Design by <strong>Alan Santos</strong></p>
+        <p>Design by <strong><a href="https://github.com/ssantosalan" target="_blank" rel="external">Alan Santos</a></strong></p>
     </footer>
     
 </body>
